...
            ],
          ),
          Container(
            padding: EdgeInsets.only(top: 20),
            width: 300,
            child: RaisedButton(
              key: Key('addRatingButton'),
              child: Text(
                AppLocalizations.of(context)
                    .translate('rate_this_movie'),
                style: TextStyle(color: Colors.white),
              ),
              color: Color.fromRGBO(51, 51, 61, 1),
...
              ),
            ],
          ),
          actions: <Widget>[
            // usually buttons at the bottom of the dialog
            new FlatButton(
              key: Key('addRatingConfirmButton'),
              child: new Text(AppLocalizations.of(context)
                  .translate('confirm')),
              onPressed: () {
                _addUserRating();
                Navigator.of(context).pop();
              },
...
